k8s/prometheus/05_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.keindev.ru`)
      priority: 10
      services:
        - name: prometheus
          port: 9090
      middlewares:
        - name: authentik
          namespace: authentik
    - kind: Rule
      match: "Host(`prometheus.keindev.ru`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: authentik-server.authentik.svc.cluster.local
  tls:
    secretName: local-keindev-ru-tls
